# databricks-ecommerce

./: .gitignore  README.md  databricks.yml  documentation.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
conf/: pipeline.yml  simulator.yml
docs/: README.md  architecture.md  architecture_overview.md  bronze_layer.md  ci_cd.md  data_model.md  data_quality.md  dlt_pipeline.md  faiss_semantic_search.md  gold_layer.md  hybrid_ranking.md  ranking.md  runbook.md  search.md  silver_layer.md
notebooks/: 00_setup.py  01_create_tables.py  10_run_simulator.py  11_simulate.py  20_bronze.py  30_silver.py  40_gold.py  99_quality_checks.py  faiss_rebuild.py
pipelines/dlt/: bronze.py  gold.py  schemas.py  silver.py
pipelines/faiss/: build.py  setup_volume.py
pipelines/vector_search/: setup.py
src/bronze/: ingest_events.py
src/common/: config.py  io.py  quality.py  schemas.py  version.py
src/gold/: abandoned_carts.py  daily_sales.py  funnel.py  user_360.py
src/silver/: dim_products.py  dim_users.py  events.py  fact_orders.py
src/simulator/: api.py  behavior.py  emit.py  entities.py  run.py
tests/: conftest.py  test_behavior.py  test_config.py  test_entities.py  test_quality.py  test_run.py
web/: README.md
web/backend/: agents.py  app.py  chat_schema.py  databricks_client.py  embeddings.py  faiss_index.py  llm_client.py  products.py  ranking.py  requirements.txt  schema.py  simulator.py  vector_search.py
web/config/: .env.example
web/frontend/: cart.html  checkout.html  index.html  product.html
web/frontend/css/: styles.css
web/frontend/js/: app.js  catalog.js  chat.js  tracker.js
