[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-ecommerce"
version = "0.1.0"
description = "Production-style Medallion lakehouse on Databricks: e-commerce simulator, Auto Loader, Delta Lake (Bronze/Silver/Gold)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bruno Peixoto" }]
keywords = ["databricks", "delta-lake", "medallion", "pyspark", "data-engineering"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]

# Runtime deps for the simulator + config loader.
# pyspark / delta-spark are provided by the Databricks runtime
# and are NOT pinned here on purpose.
dependencies = [
    "faker>=24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "chispa>=0.10",
    "ruff>=0.5",
]
spark = [
    # Optional local PySpark for tests that need a real SparkSession.
    # CI does NOT install this by default — pure-Python tests run first
    # and fast. Install with `pip install -e .[spark]` to opt in.
    "pyspark>=3.5,<4.0",
    "delta-spark>=3.2,<4.0",
]

[project.urls]
Homepage = "https://github.com/brunopeixotogit/databricks-ecommerce"
Repository = "https://github.com/brunopeixotogit/databricks-ecommerce"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "notebooks*", "conf*"]

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
]
markers = [
    "spark: tests that require a local SparkSession (skipped if pyspark missing)",
]

[tool.coverage.run]
branch = true
source = ["src"]
# The default CI lane installs only the [dev] extras (no PySpark), so any
# module that imports pyspark.* cannot be exercised here. Excluding them
# keeps the coverage gate honest — it measures what the lane actually
# runs, not the whole codebase. PySpark-bound modules will be covered by
# a future [spark]-extras CI lane (see docs/ci_cd.md).
omit = [
    "**/__init__.py",
    "src/bronze/*",
    "src/silver/*",
    "src/gold/*",
    "src/common/io.py",
    "src/common/schemas.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks", ".venv"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
]
ignore = [
    "E501",  # handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # asserts allowed in tests
